--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "fontface-source-sans-pro": "^2.0.10-alpha1",
     "jquery": "^3.2.1",
+    "moment": "^2.29.0",
     "ng2-file-upload": "^1.3.0",
     "ng2-select": "^2.0.0",
     "ngx-echarts": "^2.0.0",
