--- a/package.json
+++ b/package.json
@@ -25,14 +25,20 @@
     "@angular/router": "^7.2.10",
     "angular-froala-wysiwyg": "^2.9.3",
     "animate.css": "^3.5.2",
+    "blueimp-canvas-to-blob": "^3.28.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.9.4",
     "core-js": "^2.5.4",
     "echarts": "^3.8.5",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "fontface-source-sans-pro": "^2.0.10-alpha1",
+    "fs": "0.0.1-security",
     "jquery": "^3.2.1",
     "moment": "^2.29.0",
+    "ng2-charts": "^2.4.2",
     "ng2-file-upload": "^1.3.0",
+    "ng2-img-max": "^2.2.4",
     "ng2-select": "^2.0.0",
     "ngx-echarts": "^2.0.0",
     "ngx-modal": "^0.0.29",
@@ -42,6 +48,7 @@
     "roboto-fontface": "^0.8.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.0.0-rc.0",
+    "socket.io": "^3.1.0",
     "sweetalert2": "^7.6.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -53,7 +60,7 @@
     "@angular/language-service": "^7.2.10",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
