--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ng-pi-admin",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
