--- a/package.json
+++ b/package.json
@@ -73,8 +73,13 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.7",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0"
+  },
+  "engines":{
+	  "node":"14.11.0",
+	  "npm":"6.14.8"
   }
 }
