--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:ci": "ng build --prod --base-href ./",
     "test": "ng test",
     "lint": "ng lint",
+    "heroku-postbuild": "ng build --prod",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -64,6 +65,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
+    "enhanced-resolve": "^3.3.0",
+    "express": "^4.17.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -78,8 +81,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0"
   },
-  "engines":{
-	  "node":"14.11.0",
-	  "npm":"6.14.8"
+  "engines": {
+    "node": "14.11.0",
+    "npm": "6.14.8"
   }
 }
